[package]
name = "vods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
first-ok = "0.1.1"
futures = "0.3.28"
hex = "0.4.3"
m3u8-rs = "5.0.4"
reqwest = { version = "0.11.17", features = ["trust-dns", "rustls-tls"] }
sha1 = "0.10.5"
tokio = { version = "1.28.0", features = ["sync", "macros", "rt-multi-thread"] }
url = "2.3.1"
