[package]
name = "vods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
first-ok = "0.1.2"
futures = "0.3.28"
hex = "0.4.3"
m3u8-rs = "5.0.4"
reqwest = { version = "0.11.18", features = ["trust-dns", "rustls-tls"] }
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["sync", "macros", "rt-multi-thread"] }
url = "2.4.0"
